--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "core-js": "^3.9.1",
+    "firebase": "^8.4.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
