--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "dev-debug": "node --debug node_modules/.bin/nuxt"
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "core-js": "^3.9.1",
     "firebase": "^8.4.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vuefire": "^2.2.5"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3"
