--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^5.9.55",
     "core-js": "^3.9.1",
     "firebase": "^8.4.1",
+    "firebaseui": "^4.8.0",
     "nuxt": "^2.15.3",
     "vuefire": "^2.2.5",
     "vuex": "^3.6.2"
