--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-tools": "^9.10.1",
     "firebaseui": "^4.8.0",
     "nuxt": "^2.15.3",
+    "pwa": "^1.9.7",
     "vuefire": "^2.2.5",
     "vuex": "^3.6.2"
   },
